Feat: Adiciona update de Gerente na camada de aplicação